
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.arashi.myapplication.Activity.MainActivity"
    android:background="@drawable/whitepaper"
    >




    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/login"
            style="@style/HeaderStyle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/login"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_layout">

        <ImageView
            android:src="@drawable/logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/banner"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/username"
            style="@style/TextViewStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/username" />


        <EditText
            android:id="@+id/username_text"
            style="@style/EditTextStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/username"
            android:textColor="@color/color_text_black"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_layout"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/password"
            style="@style/TextViewStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password_text"
            style="@style/EditTextPasswordStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/password" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_layout"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">


        <Button
            android:id="@+id/button_confirm"
            style="@style/TextButtonStyle1"
            android:layout_width="match_parent"

            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/color_text_light_green"
            android:text="@string/confirm"
            android:onClick="onConfirmClicked"/>


        <Button
            android:id="@+id/button_cancel"
            style="@style/TextButtonStyle1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/color_text_black"
            android:onClick="onClick"
            android:text="@string/cancel"  />
    </LinearLayout>
    <CheckBox
        android:id="@+id/checkbox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_layout"
        android:layout_marginLeft="10dp"
        android:text="@string/remember_password"
        android:textColor="@color/color_text_black"
        />
    <TextView
        android:id="@+id/SignUpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox1"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:onClick="onSignUpClicked"
        android:text="@string/sign_up_here"
        android:textColor="@color/color_text_black"
        android:textSize="17sp"
        />
</RelativeLayout>
