<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"--><!--android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"--><!--android:paddingRight="@dimen/activity_horizontal_margin"--><!--android:paddingTop="@dimen/activity_vertical_margin"--><!--android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">-->

<!--<TextView android:text="@string/hello_world" android:layout_width="wrap_content"--><!--android:layout_height="wrap_content" />-->

<!--</RelativeLayout>-->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.arashi.myapplication.Activity.SignUpActivity"
        android:background="@drawable/whitepaper0"
        >
    <!--android:background="@drawable/whitepaper0"  //put up for bg-->
    <!--<ImageView-->
        <!--android:id="@+id/banner"-->
        <!--android:src="@drawable/mainbanner"-->
        <!--android:background="@color/color_text_banner_green"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="80dp" />-->

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--android:layout_below="@id/banner">-->

        <TextView
            android:id="@+id/sig_nup"
            style="@style/HeaderStyle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/sign_up"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <Button
            android:id="@+id/button_Teacher"
            android:layout_below="@id/sig_nup"
            style="@style/TextButtonStyle1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/color_text_green"
            android:text="@string/teacher"
            android:textSize="50dp"
            />
        <Button
            android:id="@+id/button_student"
            android:layout_below="@id/button_Teacher"
            style="@style/TextButtonStyle1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/color_text_light_green"
            android:text="@string/student"
            android:textSize="50dp" />

    </RelativeLayout>




</RelativeLayout>
