<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"--><!--android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"--><!--android:paddingRight="@dimen/activity_horizontal_margin"--><!--android:paddingTop="@dimen/activity_vertical_margin"--><!--android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">-->

<!--<TextView android:text="@string/hello_world" android:layout_width="wrap_content"--><!--android:layout_height="wrap_content" />-->

<!--</RelativeLayout>-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.arashi.myapplication.Activity.StudentSignUp"
    android:background="@drawable/whitepaper0"
    >


    <!--<ImageView-->
        <!--android:id="@+id/banner"-->
        <!--android:src="@drawable/mainbanner"-->
        <!--android:background="@color/color_text_banner_green"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="80dp" />-->

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--android:layout_below="@id/banner">-->

        <TextView
            android:id="@+id/sin_up"
            style="@style/HeaderStyle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/sign_up"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>



    <LinearLayout
        android:id="@+id/fullName_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_layout"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/fullName"
            style="@style/TextViewStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="Full Name" />


        <EditText
            android:id="@+id/fullName_text"
            style="@style/EditTextStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullName_layout"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/username"
            style="@style/TextViewStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/username" />


        <EditText
            android:id="@+id/username_text"
            style="@style/EditTextStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Username"
            android:textColor="@color/color_text_black"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_layout"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/email"
            style="@style/TextViewStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="Email" />


        <EditText
            android:id="@+id/email_text"
            style="@style/EditTextStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Email"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_layout"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/password"
            style="@style/TextViewStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password_text"
            style="@style/EditTextPasswordStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Password" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/repassword_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_layout"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/repassword"
            style="@style/TextViewStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="Re-password" />

        <EditText
            android:id="@+id/repassword_text"
            style="@style/EditTextPasswordStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Re-Password" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/radio_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_layout"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <!--<RadioGroup-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/radioGroup"-->
        <!--android:layout_centerHorizontal="true">-->
        <!--<RadioButton-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Student"-->
        <!--style="@style/TextViewStyle1"-->
        <!--android:id="@+id/radioButtonStudent"-->
        <!--android:layout_alignLeft="@+id/radioButtonTeacher"-->
        <!--android:layout_alignStart="@+id/radioButtonTeacher"-->
        <!--android:checked="false" />-->
        <!--<RadioButton-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Teacher"-->
        <!--style="@style/TextViewStyle1"-->
        <!--android:id="@+id/radioButtonTeacher"-->
        <!--android:checked="false" />-->

        <!--</RadioGroup>-->

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Sign Up Here!"-->
        <!--android:textColor="@color/color_text_black"/>-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/repassword_layout"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">


        <Button
            android:id="@+id/button_confirm"
            style="@style/TextButtonStyle1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/color_text_green"
            android:text="Confirm"
           />


    </LinearLayout>
    <!--<CheckBox-->
    <!--android:id="@+id/checkbox1"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@id/button_layout"-->
    <!--android:layout_marginLeft="10dp"-->
    <!--android:text="Remember Password"-->
    <!--/>-->


</RelativeLayout>